--- a/Assignment03.ipynb
+++ b/Assignment03.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bb4f5554-efc9-460e-8254-995efb5f06ac",
+   "id": "c596493d-42fd-48b5-9ead-825ca9869da1",
    "metadata": {},
+   "source": [
+    "# \"My Title\"\n",
+    "> \"Awesome summary\"\n",
+    "\n",
+    "- toc:true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- author: Hamel Husain & Jeremy Howard\n",
+    "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb4f5554-efc9-460e-8254-995efb5f06ac",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Assignment 3"
    ]
@@ -18,11 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "f5e83735-8845-4afc-b79a-b0efe963d305",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "#hide\n",
     "# Import the pandas library\n",
     "\n",
     "import pandas as pd "
@@ -40,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "074f0f80-1c5f-495b-90a3-852f209103a7",
    "metadata": {},
    "outputs": [],
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "ab04825f-f9ba-49ae-bf40-322f4e2554a9",
    "metadata": {},
    "outputs": [
@@ -62,7 +83,7 @@
        "(8385, 12)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "489d43e7-fafa-4156-a98e-01cb2cdaed4d",
    "metadata": {},
    "outputs": [],
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "e20a45fc-dfc0-4559-977b-d2b86e2f6534",
    "metadata": {},
    "outputs": [
@@ -100,7 +121,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "7a549f96-8e8e-456a-a219-096dcddb1fb8",
    "metadata": {},
    "outputs": [
@@ -135,7 +156,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "51471321-443e-4b23-846e-54630d29af29",
    "metadata": {},
    "outputs": [
@@ -244,7 +265,7 @@
        "1       1.517670               0.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "f0206392-0e77-497c-8394-ad3e229a83ab",
    "metadata": {},
    "outputs": [
@@ -353,7 +374,7 @@
        "8384       1.775448          1.084327  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "e87824ad-9ff4-487d-8506-00d940083ae0",
    "metadata": {},
    "outputs": [
@@ -573,7 +594,7 @@
        "max       791.265300        937.097800  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "9b5dfabd-61b3-4cda-80d4-7a20444afa25",
    "metadata": {},
    "outputs": [
@@ -607,7 +628,7 @@
        "Name: Ratio.Per GDP, Length: 8385, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,9 +641,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "0c5e2c07-0dff-4e78-bbb7-8faef3fdf758",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -630,7 +653,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -657,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "6e7c7f92-3b6c-4cd0-a9ef-6356cb4c2ca5",
    "metadata": {},
    "outputs": [
@@ -677,7 +700,7 @@
        "Name: Ratio.Per GDP, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "3a7b0251-f9e3-4f81-858d-d6c1c2b41e2d",
    "metadata": {},
    "outputs": [
@@ -799,7 +822,7 @@
        "9  Afghanistan  1979       1.345154"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "e2b2a59b-4246-40cc-b5de-728bd678b832",
    "metadata": {},
    "outputs": [
@@ -823,7 +846,7 @@
        "<AxesSubplot:xlabel='Country'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -851,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "46120796-845a-49b3-997f-b44825e375ea",
    "metadata": {},
    "outputs": [
@@ -861,7 +884,7 @@
        "<AxesSubplot:ylabel='Country'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -886,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "c8273eab-a2d6-445a-a92d-869375b82428",
    "metadata": {},
    "outputs": [
@@ -896,7 +919,7 @@
        "Text(0.5, 1.0, 'Afghanistan Emissions per GDP from 1970-1979')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -942,17 +965,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "3fa0ce73-b09e-46a6-b1e7-2d68f2696f8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb5979239d0>"
+       "<matplotlib.legend.Legend at 0x7f7f33259d30>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -991,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "id": "a38589f8-5d76-4b93-964b-d26573dc39e1",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "afe8891a-5540-407d-972c-5e53e1bac384",
    "metadata": {
     "tags": []
@@ -1343,19 +1366,20 @@
        "42  Afghanistan  2012       0.880562"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#collapse-output\n",
     "x = emissions_df.loc[0:42,['Country','Year','Ratio.Per GDP']]\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8a867bb8-bef4-41c0-b9ae-a95e60461972",
    "metadata": {},
    "outputs": [],
@@ -1365,17 +1389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "f9b8328a-7415-46e1-bf01-91a41d7a4aeb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb5976e5a00>"
+       "<matplotlib.legend.Legend at 0x7f7f331ec670>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1403,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f7c3ecd9-333e-4ccd-8db5-4920bd187e1b",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "610928e5-a573-4036-acdc-737eb8599376",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "dd036716-1d8a-4168-9c29-1793e9aa802b",
    "metadata": {
     "tags": []
@@ -1432,10 +1456,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb5975b6b50>"
+       "<matplotlib.legend.Legend at 0x7f7f33250070>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1463,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b33a568d-1d5e-48ed-85f7-3a5e7f30b708",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "fdca7acb-dd0a-43c5-8e4d-dd8976d92f41",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1776,7 @@
        "[195 rows x 12 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "id": "71479142-ef33-4e87-9fc7-4a9797127d14",
    "metadata": {},
    "outputs": [],
@@ -1775,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "id": "a845654c-7b28-42f0-b0bf-6b6d85898191",
    "metadata": {
     "tags": []
@@ -1787,7 +1811,7 @@
        "Text(0.5, 1.0, 'Emissions per GDP in 2012 by Country')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1814,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "id": "17ce6932-4800-43ee-9127-d6dd5ceadc9b",
    "metadata": {},
    "outputs": [],
@@ -1824,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 34,
    "id": "7e4d80b1-d78e-4ddc-9d3a-abe370ce36ce",
    "metadata": {},
    "outputs": [
@@ -2740,12 +2764,13 @@
        "6105       72.62834          0.571643  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "##collapse-hide\n",
     "qatar_emissions = emissions_df[emissions_df['Country'] == 'Qatar']\n",
     "\n",
     "qatar_emissions"
@@ -2753,17 +2778,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "id": "866ed0d5-e317-452e-9ce7-5e9b961ce46d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb58f925370>"
+       "<matplotlib.legend.Legend at 0x7f7f3301d3d0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
